arreglé errores porque me confundí de hoja de estilos y agregué cualquier cosa

--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
                             <a href="#" class="main-nav__link nav-link active">Inicio</a>
                         </li>
                         <li class="main-nav__item nav-item">
-                            <a href="./pages/postres.html" class="main-nav__link nav-link active"
-                                aria-current="page">Dulce
+                            <a href="./pages/recetas.html" class="main-nav__link nav-link active"
+                                aria-current="page">Recetas
                             </a>
                         </li>
                         <li class="main-nav__item nav-item">
-                            <a href="#" class="main-nav__link nav-link active" aria-current="page">Salado</a>
+                            <a href="./pages/nosotros.html" class="main-nav__link nav-link active" aria-current="page">Nosotros</a>
                         </li>
                         <li class="main-nav__item nav-item">
-                            <a href="./pages/quienes-somos.html" class="main-nav__link nav-link active"
+                            <a href="./pages/contacto.html" class="main-nav__link nav-link active"
                                 aria-current="page">Contacto</a>
                         </li>
                         <li class="main-nav__item nav-item">
-                            <a href="./pages/quienes-somos.html" class="main-nav__link nav-link active"
-                                aria-current="page">Nosotros</a>
+                            <a href="./pages/testimonios.html" class="main-nav__link nav-link active"
+                                aria-current="page">Testimonios</a>
                         </li>
                     </ul>
                     <!-- Búsqueda -->
@@ -141,7 +141,7 @@
             </div>
 
             <div class="button-container">
-                <a href="./pages/postres.html" class="button--secondary button--vermas">Ver más</a>
+                <a href="./pages/recetas.html" class="button--secondary button--vermas">Ver más</a>
             </div>
         </section>
 
@@ -186,7 +186,7 @@
             </div>
 
             <div class="button-container">
-                <a href="./pages/postres.html" class="button--secondary button--vermas">Ver más</a>
+                <a href="./pages/recetas.html" class="button--secondary button--vermas">Ver más</a>
             </div>
 
         </section>
