--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary main-nav">
             <div class="container-fluid main-nav__container">
                 <!-- Logo -->
-                <img src="./assetsProyecto/guille.png" alt="Logo" class="main-nav__logo">
+                <img src="../assetsProyecto/guille.png" alt="Logo" class="main-nav__logo">
                 <!-- Botón hamburguesa -->
                 <button class="navbar-toggler button--vermas" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -35,23 +35,22 @@
                 <div class="collapse navbar-collapse main-nav__collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 main-nav__list  ">
                         <li class="main-nav__item">
-                            <a href="#" class="main-nav__link nav-link active">Inicio</a>
+                            <a href="../index.html" class="main-nav__link nav-link active">Inicio</a>
                         </li>
                         <li class="main-nav__item nav-item">
-                            <a href="./pages/postres.html" class="main-nav__link nav-link active"
-                                aria-current="page">Dulce
-                            </a>
+                            <a href="./recetas.html" class="main-nav__link nav-link active"
+                                aria-current="page">recetas</a>
                         </li>
                         <li class="main-nav__item nav-item">
-                            <a href="#" class="main-nav__link nav-link active" aria-current="page">Salado</a>
-                        </li>
-                        <li class="main-nav__item nav-item">
-                            <a href="./pages/quienes-somos.html" class="main-nav__link nav-link active"
-                                aria-current="page">Contacto</a>
-                        </li>
-                        <li class="main-nav__item nav-item">
-                            <a href="./pages/quienes-somos.html" class="main-nav__link nav-link active"
+                            <a href="#" class="main-nav__link nav-link active"
                                 aria-current="page">Nosotros</a>
+                        </li>
+                        <li class="main-nav__item nav-item">
+                            <a href="./contacto.html" class="main-nav__link nav-link active" aria-current="page">Contacto</a>
+                        </li>
+                        <li class="main-nav__item nav-item">
+                            <a href="./testimonios.html" class="main-nav__link nav-link active"
+                                aria-current="page">Testimonios</a>
                         </li>
                     </ul>
                     <!-- Búsqueda -->
@@ -71,12 +70,10 @@
     <main>
 
         <section>
-
-
             <section class="about-section">
 
                 <h1>Sobre Nosotros</h1>
-                
+
                 <img src="../assetsProyecto/panaderoGuille.png" alt="Foto de Guille" class="about-section__image">
                 <p class="about-section__text">
                     ¡Hola! soy Guille, la mente y el corazón detrás de este espacio culinario. Desde muy pequeña, la
@@ -95,36 +92,37 @@
                 </p>
             </section>
 
-                    <div class="logo--description">
-            <h5>También puedes seguirnos en nuestras redes</h5>
-        </div>
-        <div class="rrss-block">
-
-            <div>
-                <ul class="main-nav__list">
-                    <li>
-                        <img src="../assetsProyecto/instagram.png" alt="logo de Instagram"
-                            class="logo--footer__red-social">
-                        <a href="#" class="main-nav__link">Instagram</a>
-                    </li>
-                    <li>
-                        <img src="../assetsProyecto/facebook.png" alt="logo de facebook"
-                            class="logo--footer__red-social">
-
-                        <a href="#" class="main-nav__link">Facebook</a>
-                    </li>
-                    <li>
-                        <img src="../assetsProyecto/whatsapp.png" alt="Logo de whatsapp"
-                            class="logo--footer__red-social">
-                        <a href="#" class="main-nav__link">Whatsapp</a>
-                    </li>
-                    <li>
-                        <img src="../assetsProyecto/gorjeo (1).png" alt="Logo de X" class="logo--footer__red-social">
-                        <a href="#" class="main-nav__link">X</a>
-                    </li>
-                </ul>
+            <div class="logo--description">
+                <h5>También puedes seguirnos en nuestras redes</h5>
             </div>
-        </div>
+            <div class="rrss-block">
+
+                <div>
+                    <ul class="main-nav__list">
+                        <li>
+                            <img src="../assetsProyecto/instagram.png" alt="logo de Instagram"
+                                class="logo--footer__red-social">
+                            <a href="#" class="main-nav__link">Instagram</a>
+                        </li>
+                        <li>
+                            <img src="../assetsProyecto/facebook.png" alt="logo de facebook"
+                                class="logo--footer__red-social">
+
+                            <a href="#" class="main-nav__link">Facebook</a>
+                        </li>
+                        <li>
+                            <img src="../assetsProyecto/whatsapp.png" alt="Logo de whatsapp"
+                                class="logo--footer__red-social">
+                            <a href="#" class="main-nav__link">Whatsapp</a>
+                        </li>
+                        <li>
+                            <img src="../assetsProyecto/gorjeo (1).png" alt="Logo de X"
+                                class="logo--footer__red-social">
+                            <a href="#" class="main-nav__link">X</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
     </main>
 
