--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary main-nav">
             <div class="container-fluid main-nav__container">
                 <!-- Logo -->
-                <img src="./assetsProyecto/guille.png" alt="Logo" class="main-nav__logo">
+                <img src="../assetsProyecto/guille.png" alt="Logo" class="main-nav__logo">
                 <!-- Botón hamburguesa -->
                 <button class="navbar-toggler button--vermas" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -35,23 +35,19 @@
                 <div class="collapse navbar-collapse main-nav__collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 main-nav__list  ">
                         <li class="main-nav__item">
-                            <a href="#" class="main-nav__link nav-link active">Inicio</a>
+                            <a href="../index.html" class="main-nav__link nav-link active">Inicio</a>
                         </li>
                         <li class="main-nav__item nav-item">
-                            <a href="./pages/postres.html" class="main-nav__link nav-link active"
-                                aria-current="page">Dulce
-                            </a>
+                            <a href="./recetas.html" class="main-nav__link nav-link active"aria-current="page">recetas</a>
                         </li>
                         <li class="main-nav__item nav-item">
-                            <a href="#" class="main-nav__link nav-link active" aria-current="page">Salado</a>
+                            <a href="./nosotros.html" class="main-nav__link nav-link active" aria-current="page">Nosotros</a>
                         </li>
                         <li class="main-nav__item nav-item">
-                            <a href="./pages/quienes-somos.html" class="main-nav__link nav-link active"
-                                aria-current="page">Contacto</a>
+                            <a href="#" class="main-nav__link nav-link active" aria-current="page">Contacto</a>
                         </li>
                         <li class="main-nav__item nav-item">
-                            <a href="./pages/quienes-somos.html" class="main-nav__link nav-link active"
-                                aria-current="page">Nosotros</a>
+                            <a href="./testimonios.html" class="main-nav__link nav-link active" aria-current="page">Testimonios</a>
                         </li>
                     </ul>
                     <!-- Búsqueda -->
@@ -66,7 +62,6 @@
         </nav>
     </header>
 
-    <!-- Cuerpo del sitio  -->
 
     <main>
         <section class="contact-form-section">
@@ -84,7 +79,7 @@
                     <label for="mensaje">Mensaje:</label>
                     <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
                 </div>
-                <button type="submit" class="button--primary">Enviar Mensaje</button>
+                <button type="submit" class="button--secondary">Enviar Mensaje</button>
             </form>
         </section>
 
