agregué comentarios en testimonios porque el footer me quedaba muy arriba

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -42,11 +42,11 @@
                                 aria-current="page">recetas</a>
                         </li>
                         <li class="main-nav__item nav-item">
-                            <a href="#" class="main-nav__link nav-link active"
-                                aria-current="page">Nosotros</a>
+                            <a href="#" class="main-nav__link nav-link active" aria-current="page">Nosotros</a>
                         </li>
                         <li class="main-nav__item nav-item">
-                            <a href="./contacto.html" class="main-nav__link nav-link active" aria-current="page">Contacto</a>
+                            <a href="./contacto.html" class="main-nav__link nav-link active"
+                                aria-current="page">Contacto</a>
                         </li>
                         <li class="main-nav__item nav-item">
                             <a href="./testimonios.html" class="main-nav__link nav-link active"
@@ -109,16 +109,6 @@
                                 class="logo--footer__red-social">
 
                             <a href="#" class="main-nav__link">Facebook</a>
-                        </li>
-                        <li>
-                            <img src="../assetsProyecto/whatsapp.png" alt="Logo de whatsapp"
-                                class="logo--footer__red-social">
-                            <a href="#" class="main-nav__link">Whatsapp</a>
-                        </li>
-                        <li>
-                            <img src="../assetsProyecto/gorjeo (1).png" alt="Logo de X"
-                                class="logo--footer__red-social">
-                            <a href="#" class="main-nav__link">X</a>
                         </li>
                     </ul>
                 </div>
