--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -46,11 +46,11 @@
                                 aria-current="page">Nosotros</a>
                         </li>
                         <li class="main-nav__item nav-item">
-                            <a href="./contacto.html" class="main-nav__link nav-link active" aria-current="page">Contacto</a>
+                            <a href="./contacto.html" class="main-nav__link nav-link active"
+                                aria-current="page">Contacto</a>
                         </li>
                         <li class="main-nav__item nav-item">
-                            <a href="#" class="main-nav__link nav-link active"
-                                aria-current="page">Testimonios</a>
+                            <a href="#" class="main-nav__link nav-link active" aria-current="page">Testimonios</a>
                         </li>
                     </ul>
                     <!-- Búsqueda -->
@@ -68,7 +68,9 @@
 
     <main>
         <section class="testimonials-section">
+
             <h2>Lo que opinan Nuestros Usuarios</h2>
+
             <div class="testimonials-grid">
                 <div class="testimonial-card">
                     <img src="../assetsProyecto/testimonio1.png" alt="Foto de Usuario 1"
@@ -93,10 +95,46 @@
                 </div>
             </div>
         </section>
+        <!-- <section class="about-section">
+            
+        </section> -->
+        <section class="contact-form-section">
+            <div>
+                <h2> Puedes dejarnos tu comentario!</h2>
+            <p class="about-section__text">
+                Cada vez que te tomas el tiempo de dejar un comentario en nuestras recetas, nos ayudas de muchísimas
+                maneras:
+            </p>
+            <p class="about-section__text">
+                <strong>Nos inspiras:</strong> Saber qué pensás, qué probaste, o qué ajustes hiciste, nos da ideas
+                frescas para seguir creando contenido que te guste.
+            </p>
+            <p class="about-section__text" >
+                <strong>Ayudás a la comunidad:</strong> Tus consejos, tus dudas o tus éxitos al probar una receta son
+                oro puro para otros cocineros como vos. Juntos, hacemos que este recetario crezca y mejore.
+            </p>
+            <p class="about-section__text">
+                <strong>Nos ayudás a mejorar:</strong> Si algo no quedó claro, o si tenés una sugerencia, tus
+                comentarios son la mejor herramienta para pulir lo que hacemos.
+            </p>
+            </div>
+            
+            <form class="contact-form">
+                <div>
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" id="nombre" name="nombre" required>
+                </div>
+                <div>
+                    <label for="mensaje">Mensaje:</label>
+                    <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+                </div>
+                <button type="submit" class="button--secondary">Enviar Mensaje</button>
+            </form>
+        </section>>
+
+
+
     </main>
-
-
-
 
     <footer>
         <p>&copy; 2025 Recetas de Guille. Todos los derechos reservados.</p>
