--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -73,7 +73,7 @@
             
 
             <div class="recetas-grid">
-                <div class="recipe-card">
+                <div class="recipe-card" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="500">
                     <img src="../assetsProyecto/tarta-de-manzana.jpg" alt="Receta de Tarta de Manzana" class="recipe-card__image">
                     <div class="recipe-card__content">
                         <h3 class="recipe-card__title">Tarta de Manzana Clásica</h3>
@@ -82,7 +82,7 @@
                         <a href="#" class="button--secondary">Ver Receta</a>
                     </div>
                 </div>
-                <div class="recipe-card">
+                <div class="recipe-card" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="500">
                     <img src="../assetsProyecto/torta-de-chocolate.jpg" alt="Receta de Torta de Chocolate"
                         class="recipe-card__image">
                     <div class="recipe-card__content">
@@ -92,7 +92,7 @@
                         <a href="#" class="button--secondary">Ver Receta</a>
                     </div>
                 </div>
-                <div class="recipe-card">
+                <div class="recipe-card" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="500">
                     <img src="../assetsProyecto/brownie.jpg" alt="Receta de Brownies" class="recipe-card__image">
                     <div class="recipe-card__content">
                         <h3 class="recipe-card__title">Brownies con Nueces</h3>
@@ -104,10 +104,10 @@
             </div>
         </section>
 
-        <section class="recetas-section">
+        <section class="recetas-section" >
                 <h2 >Recetas Saladas</h2>
             <div class="recetas-grid">
-                <div class="recipe-card">
+                <div class="recipe-card" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="500">
                     <img src="../assetsProyecto/pollo-al-horno.jpg" alt="Receta de Pollo al Horno" class="recipe-card__image">
                     <div class="recipe-card__content">
                         <h3 class="recipe-card__title">Pollo al Horno con Hierbas</h3>
@@ -116,7 +116,7 @@
                         <a href="#" class="button--secondary">Ver Receta</a>
                     </div>
                 </div>
-                <div class="recipe-card">
+                <div class="recipe-card" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="500">
                     <img src="../assetsProyecto/ensalada-fresca.jpg" alt="Receta de Ensalada Fresca" class="recipe-card__image">
                     <div class="recipe-card__content">
                         <h3 class="recipe-card__title">Ensalada Mediterránea</h3>
@@ -125,7 +125,7 @@
                         <a href="#" class="button--secondary">Ver Receta</a>
                     </div>
                 </div>
-                <div class="recipe-card">
+                <div class="recipe-card" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="500">
                     <img src="../assetsProyecto/pizza-casera.jpg" alt="Receta de Pizza Casera" class="recipe-card__image">
                     <div class="recipe-card__content">
                         <h3 class="recipe-card__title">Pizza Casera al Estilo Napolitano</h3>
