--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -72,21 +72,24 @@
             <h2>Lo que opinan Nuestros Usuarios</h2>
 
             <div class="testimonials-grid">
-                <div class="testimonial-card">
+                <div class="testimonial-card " data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="../assetsProyecto/testimonio1.png" alt="Foto de Usuario 1"
                         class="testimonial-card__image">
                     <p class="testimonial-card__text">"¡Las recetas de Guille son increíbles! Sencillas de seguir y
                         siempre con resultados deliciosos. Mi familia está encantada."</p>
                     <p class="testimonial-card__author">- María P.</p>
                 </div>
-                <div class="testimonial-card">
+                <div class="testimonial-card" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="../assetsProyecto/testimonio2.png" alt="Foto de Usuario 2"
                         class="testimonial-card__image">
                     <p class="testimonial-card__text">"Nunca pensé que cocinar fuera tan divertido hasta que descubrí
                         este blog. ¡Totalmente recomendado para todos los niveles!"</p>
                     <p class="testimonial-card__author">- Juan C.</p>
                 </div>
-                <div class="testimonial-card">
+                <div class="testimonial-card" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="../assetsProyecto/testimonio3.png" alt="Foto de Usuario 3"
                         class="testimonial-card__image">
                     <p class="testimonial-card__text">"Recetas claras, ingredientes fáciles de conseguir y un toque
@@ -101,24 +104,25 @@
         <section class="contact-form-section">
             <div>
                 <h2> Puedes dejarnos tu comentario!</h2>
-            <p class="about-section__text">
-                Cada vez que te tomas el tiempo de dejar un comentario en nuestras recetas, nos ayudas de muchísimas
-                maneras:
-            </p>
-            <p class="about-section__text">
-                <strong>Nos inspiras:</strong> Saber qué pensás, qué probaste, o qué ajustes hiciste, nos da ideas
-                frescas para seguir creando contenido que te guste.
-            </p>
-            <p class="about-section__text" >
-                <strong>Ayudás a la comunidad:</strong> Tus consejos, tus dudas o tus éxitos al probar una receta son
-                oro puro para otros cocineros como vos. Juntos, hacemos que este recetario crezca y mejore.
-            </p>
-            <p class="about-section__text">
-                <strong>Nos ayudás a mejorar:</strong> Si algo no quedó claro, o si tenés una sugerencia, tus
-                comentarios son la mejor herramienta para pulir lo que hacemos.
-            </p>
+                <p class="about-section__text">
+                    Cada vez que te tomas el tiempo de dejar un comentario en nuestras recetas, nos ayudas de muchísimas
+                    maneras:
+                </p>
+                <p class="about-section__text">
+                    <strong>Nos inspiras:</strong> Saber qué pensás, qué probaste, o qué ajustes hiciste, nos da ideas
+                    frescas para seguir creando contenido que te guste.
+                </p>
+                <p class="about-section__text">
+                    <strong>Ayudás a la comunidad:</strong> Tus consejos, tus dudas o tus éxitos al probar una receta
+                    son
+                    oro puro para otros cocineros como vos. Juntos, hacemos que este recetario crezca y mejore.
+                </p>
+                <p class="about-section__text">
+                    <strong>Nos ayudás a mejorar:</strong> Si algo no quedó claro, o si tenés una sugerencia, tus
+                    comentarios son la mejor herramienta para pulir lo que hacemos.
+                </p>
             </div>
-            
+
             <form class="contact-form">
                 <div>
                     <label for="nombre">Nombre:</label>
