--- a/index.html
+++ b/index.html
@@ -206,19 +206,27 @@
                 <article class="testimonial-card">
                     <img src="./assetsProyecto/testimonio1.png" alt="testimonios" class="testimonial-card__image">
                     <div class="testimonial-card__content">
-                        <h3 class="testimonial-card__author">María P.</h3>
+                        <h3 class="testimonial-card__author">Rocío Perez</h3>
                         <p class="testimonial-card__description">"La Cocina de Guille es uno de mis rincones favoritos.
-                           "¡Las recetas de Guille son increíbles! Sencillas de seguir y
-                        siempre con resultados deliciosos. Mi familia está encantada."</p>
+                            Las
+                            recetas son sinceras, accesibles y llenas
+                            de sabor real. Se nota el amor y la sensibilidad en cada plato. Como entreno a diario,
+                            valoro lo
+                            saludable, pero también lo hecho con alma. ¡El curry de lentejas y el hummus me cambiaron la
+                            semana!"</p>
                     </div>
                 </article>
 
                 <article class="testimonial-card">
                     <img src="./assetsProyecto/testimonio2.png" alt="testimonios" class="testimonial-card__image">
                     <div class="testimonial-card__content">
-                        <h3 class="testimonial-card__author">Juan C.</h3>
-                        <p class="testimonial-card__description">"Nunca pensé que cocinar fuera tan divertido hasta que descubrí
-                        este blog. ¡Totalmente recomendado para todos los niveles!"</p>
+                        <h3 class="testimonial-card__author">Sandro Guzman</h3>
+                        <p class="testimonial-card__description">"Pedimos el catering para el cumple de mi esposa y fue
+                            perfecto. Todo llegó impecable, con sabor
+                            casero y presentación de chef. Alejo y Valen amaron el postre de pistachos. Se nota la
+                            pasión y
+                            el
+                            detalle en cada plato. Ideal para quienes buscan salir de lo común."</p>
                     </div>
                 </article>
 
